# virtual-ai-interviewer

./: .gitignore  LICENSE  README.md  agent.py  build_rag.py  evaluate.py  generate_questions.py  implementation_plan_AI_virtual_interview.md  interview_responses.json  jd.txt  pyproject.toml  questions.json  raw_transcript.json  system_prompt.py  test_dns.py
tools/: agent_tools.py
