[project]
name = "livekit-agent-voice"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[silero,turn-detector]~=1.3",
    "livekit-plugins-cartesia>=1.5.1",
    "livekit-plugins-deepgram>=1.5.1",
    "livekit-plugins-google>=1.5.1",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.2.2",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "google-genai>=1.0.0",
    "livekit-plugins-openai>=1.5.1",
]
